stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_tuple_arity_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_tuple_arity_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × tuple shapes do not match
   ╭─[tests/fixtures/diagnostics/types/inference_tuple_arity_mismatch.ml:2:15]
 1 │ fn main() {
 2 │   let value = if true { (1, 2) } else { (1, 2, 3) };
   ·               ─────────────────┬─────────────────
   ·                                ╰── this expression requires a tuple with 2 fields, but another branch or constraint requires 3 fields
 3 │   println("unreachable")
   ╰────
  help: make both tuple expressions have the same number of fields
